website/i18n/nl/docusaurus-plugin-content-docs-dataplatform/version-3.5.0/dataplatform_USERS_AddingUsers.md
---
id: user_AddingUsers
title: Gebruikers toevoegen
sidebar_label: Gebruikers toevoegen
---
Alleen organisatiebeheerders mogen nieuwe gebruikers maken

> Zorg ervoor dat u de juiste rol voor de gebruiker instelt. Zie [Gebruikersrollen](user_UserRoles) voor meer informatie over rollen. 

## Een nieuwe gebruiker aanmaken 

Selecteer op de gegevenssetpagina van de organisatie de knop "Beheer", gevolgd door het tabblad "Leden". Selecteer de knop "Voeg Lid toe".

<img class="imageStyle" target="_blank" alt="image: Organization screen - Manage Button" src={require('./assets/Dataplatform/UserManagement/dataplatform_user_UserManagement_ManageUser_BrowserShell.png').default} />
<img class="imageStyle" target="_blank" alt="image: Organization screen - Manage Button" src={require('./assets/Dataplatform/UserManagement/dataplatform_user_UserManagement_ManageUser_AddMember.png').default} />

Bestaande gebruikers zijn gebruikers die al lid zijn van een andere organisatie. Nieuwe gebruikers zijn gebruikers die geen lid zijn van een bestaande organisatie. Om de installatie van een nieuwe gebruiker te starten, vult u eenvoudig hun e-mailadres in.

<img class="imageStyle" target="_blank" alt="image: Organization screen - Manage Button"  src={require('./assets/Dataplatform/UserManagement/dataplatform_user_UserManagement_ManageUser_AddMemberRole.png').default} />

Wanneer u op 'Voeg lid toe:’ klikt, ontvangt het nieuwe lid een geautomatiseerd e-mail naar het ingevoerde adres. De gebruikersnaam en het gebruikersnummer worden gegenereerd op basis van dit e-mailadres. 

De status van de nieuwe gebruiker blijft 'in behandeling' totdat hij zijn e-mailadres bevestigt. 

<img class="imageStyle" target="_blank" alt="image: member status pending screen" src={require('./assets/Dataplatform/UserManagement/dataplatform_user_UserManagement_ManageUser_Pending_ALT.png').default} />